fix: z-index

--- a/src/app/components/home/content.module.scss
+++ b/src/app/components/home/content.module.scss
@@ -1,10 +1,12 @@
 .content {
   flex: 1 1 30rem;
+  position: relative;
+  z-index: 100;
   h2 {
     font-size: 50px;
     font-weight: 800;
     color: #002057;
-    @media(max-width: 600px) {
+    @media (max-width: 600px) {
       font-size: 44px;
     }
   }
@@ -12,7 +14,7 @@
     font-size: 25px;
     font-weight: 600;
     color: #002057;
-    @media(max-width: 600px) {
+    @media (max-width: 600px) {
       font-size: 19px;
     }
   }
